--- a/config/cli.yaml
+++ b/config/cli.yaml
@@ -1,1 +1,6 @@
-cli: 123
+profiles:
+  - name: default
+    ak: YOUR_AK
+    sk: YOUR_SK
+    region: cn-northwest-1
+    endpoint: http://local.s3-proxy.patsnap.info/
