--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,13 @@
 version: '2.17'
 services:
-  Opsgo:
+  cbs_manager:
     image: 'cbs:latest'
     restart: always
     hostname: 'cbs'
     environment:
       TZ: Asia/Shanghai
+      DEBUG: true
     ports:
-      - '8080:80'
+      - '8011:8080'
     volumes:
-      - 'config/manager.yaml:/root/.cbs/manager.yaml'
+      - './config/:/root/.cbs/'
