chore: change volume dir

--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       DEBUG: "true" # 关闭请注释掉
       SERVICE_TYPE: manager # 决定启动命令执行的是 manager 还是 worker
     volumes:
-      - './cbs/manager.yaml:/root/.cbs/manager.yaml'
+      - '~/.cbs/manager.yaml:/root/.cbs/manager.yaml'
     ports:
       - '8012:8080'
   worker:
@@ -17,4 +17,4 @@ services:
       TZ: Asia/Shanghai
       DEBUG: "true" # 关闭请注释掉
     volumes:
-      - './cbs/cli.yaml:/root/.cbs/cli.yaml'
+      - '~/.cbs/cli.yaml:/root/.cbs/cli.yaml'
