--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
     restart: always
     environment:
       TZ: Asia/Shanghai
-      DEBUG: "true" # 关闭请注释掉
+      # DEBUG: "true" # 关闭请注释掉
       CLOUD: "aws"
       REGION: "cn&us" # 任务节点标签后部分匹配，比如 worker_tag: aws-cn&aws-us,则会被 该节点执行。
     volumes:
